--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-cv",
+  "name": "cv-eslint-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +17,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -31,7 +37,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
-    "eslint": "^9.2.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
